--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             "Oven Dried Basis": [2.55, 2.75],
             "Saturated & Surface Dry Basis": [2.55, 2.75],
             "Apparent Density": [2.6, 2.9],
-            "Water Absorption %": [1.9, 2.3]  // CHANGED from [0.5, 2.0] to [1.9, 2.3]
+            "Water Absorption %": [1.9, 2.3]
         };
 
         let currentChart = null;
